[gd_scene load_steps=9 format=3 uid="uid://3s80payn7ur0"]

[ext_resource type="Texture2D" uid="uid://bqp3sp2uwp6k2" path="res://Game_Files/Assets/UI/TempButton.png" id="1_bs6ey"]
[ext_resource type="Script" path="res://Game_Files/Scripts/MainMenu.gd" id="1_j2bii"]
[ext_resource type="Texture2D" uid="uid://bv5vd6fo2svc4" path="res://Game_Files/Assets/UI/TempButtonHover.png" id="2_uqj2k"]
[ext_resource type="Texture2D" uid="uid://e4hl64ql7skh" path="res://Game_Files/Assets/UI/TempPanel.png" id="2_xhku5"]
[ext_resource type="Texture2D" uid="uid://bg7lrleksb803" path="res://Game_Files/Assets/UI/TempPanel2.png" id="5_6tq5f"]
[ext_resource type="Script" path="res://Game_Files/Scripts/SettingsMenu.gd" id="5_mn4le"]
[ext_resource type="PackedScene" uid="uid://cgojnksales8v" path="res://Game_Files/Scenes/UI/VolumeSlider.tscn" id="7_7lek8"]
[ext_resource type="AudioStream" uid="uid://63qxyefdqr8s" path="res://Game_Files/Assets/Audio/Music/Track-2.mp3" id="8_5lr1l"]

[node name="MainMenu" type="Control" groups=["GameScene"]]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("1_j2bii")

[node name="StartMenu" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.5
anchor_top = 0.435
anchor_right = 0.5
anchor_bottom = 0.435
offset_left = -320.0
offset_top = -388.8
offset_right = 320.0
offset_bottom = 546.2

[node name="MenuBackground" type="TextureRect" parent="StartMenu"]
layout_mode = 0
offset_top = 6.0
offset_right = 640.0
offset_bottom = 942.0
texture = ExtResource("2_xhku5")

[node name="NewText" type="RichTextLabel" parent="StartMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.128
anchor_right = 0.5
anchor_bottom = 0.128
offset_left = -160.0
offset_top = -104.68
offset_right = 160.0
offset_bottom = 85.32
theme_override_font_sizes/normal_font_size = 45
bbcode_enabled = true
text = "
[center]NEW GAME[/center]"

[node name="NewButton" type="TextureButton" parent="StartMenu/NewText"]
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.584
anchor_right = 0.5
anchor_bottom = 0.584
offset_left = -160.0
offset_top = -90.96
offset_right = 160.0
offset_bottom = 69.04
texture_normal = ExtResource("1_bs6ey")
texture_hover = ExtResource("2_uqj2k")

[node name="LoadText" type="RichTextLabel" parent="StartMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.372
anchor_right = 0.5
anchor_bottom = 0.372
offset_left = -160.0
offset_top = -152.78
offset_right = 160.0
offset_bottom = 37.22
theme_override_font_sizes/normal_font_size = 45
bbcode_enabled = true
text = "
[center]LOAD GAME[/center]"

[node name="LoadButton" type="TextureButton" parent="StartMenu/LoadText"]
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.584
anchor_right = 0.5
anchor_bottom = 0.584
offset_left = -160.0
offset_top = -90.96
offset_right = 160.0
offset_bottom = 69.04
texture_normal = ExtResource("1_bs6ey")
texture_hover = ExtResource("2_uqj2k")

[node name="OnlineText" type="RichTextLabel" parent="StartMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.614
anchor_right = 0.5
anchor_bottom = 0.614
offset_left = -160.0
offset_top = -197.05
offset_right = 160.0
offset_bottom = -7.04999
theme_override_font_sizes/normal_font_size = 45
bbcode_enabled = true
text = "
[center]ONLINE[/center]"

[node name="OnlineButton" type="TextureButton" parent="StartMenu/OnlineText"]
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.584
anchor_right = 0.5
anchor_bottom = 0.584
offset_left = -160.0
offset_top = -90.96
offset_right = 160.0
offset_bottom = 69.04
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("1_bs6ey")
texture_hover = ExtResource("2_uqj2k")

[node name="SettingsText" type="RichTextLabel" parent="StartMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.614
anchor_right = 0.5
anchor_bottom = 0.614
offset_left = -160.0
offset_top = -19.05
offset_right = 160.0
offset_bottom = 170.95
theme_override_font_sizes/normal_font_size = 45
bbcode_enabled = true
text = "
[center]SETTINGS[/center]"

[node name="SettingsButton" type="TextureButton" parent="StartMenu/SettingsText"]
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.584
anchor_right = 0.5
anchor_bottom = 0.584
offset_left = -160.0
offset_top = -90.96
offset_right = 160.0
offset_bottom = 69.04
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("1_bs6ey")
texture_hover = ExtResource("2_uqj2k")

[node name="QuitText" type="RichTextLabel" parent="StartMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.853
anchor_right = 0.5
anchor_bottom = 0.853
offset_left = -160.0
offset_top = -62.5151
offset_right = 160.0
offset_bottom = 127.485
theme_override_font_sizes/normal_font_size = 45
bbcode_enabled = true
text = "
[center]QUIT[/center]"

[node name="QuitButton" type="TextureButton" parent="StartMenu/QuitText"]
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.584
anchor_right = 0.5
anchor_bottom = 0.584
offset_left = -160.0
offset_top = -90.96
offset_right = 160.0
offset_bottom = 69.04
texture_normal = ExtResource("1_bs6ey")
texture_hover = ExtResource("2_uqj2k")

[node name="SettingsMenu" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 480.0
offset_top = 72.0
offset_right = 1440.0
offset_bottom = 1032.0
script = ExtResource("5_mn4le")

[node name="TextureRect" type="TextureRect" parent="SettingsMenu"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("5_6tq5f")

[node name="BackText" type="RichTextLabel" parent="SettingsMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.128
anchor_right = 0.5
anchor_bottom = 0.128
offset_left = 107.0
offset_top = 583.12
offset_right = 427.0
offset_bottom = 773.12
theme_override_font_sizes/normal_font_size = 45
bbcode_enabled = true
text = "
[center]BACK[/center]"

[node name="BackButton" type="TextureButton" parent="SettingsMenu/BackText"]
show_behind_parent = true
layout_mode = 0
offset_left = 1.0
offset_top = 19.04
offset_right = 321.0
offset_bottom = 179.04
texture_normal = ExtResource("1_bs6ey")
texture_pressed = ExtResource("2_uqj2k")
texture_hover = ExtResource("2_uqj2k")

[node name="ResolutionsDropdown" type="OptionButton" parent="SettingsMenu"]
layout_mode = 0
offset_left = 52.0
offset_top = 145.0
offset_right = 392.0
offset_bottom = 187.0
selected = 0
item_count = 2
popup/item_0/text = "1920 x 1080"
popup/item_1/text = "1280x720"
popup/item_1/id = 1

[node name="ResolutionsText" type="RichTextLabel" parent="SettingsMenu/ResolutionsDropdown"]
layout_mode = 0
offset_left = 1.0
offset_top = -27.0
offset_right = 227.0
offset_bottom = 13.0
bbcode_enabled = true
text = "RESOLUTION"

[node name="TextSizeDropdown" type="OptionButton" parent="SettingsMenu"]
layout_mode = 0
offset_left = 52.0
offset_top = 238.0
offset_right = 392.0
offset_bottom = 280.0
selected = 1
item_count = 3
popup/item_0/text = "Small"
popup/item_1/text = "Normal"
popup/item_1/id = 1
popup/item_2/text = "Large"
popup/item_2/id = 2

[node name="TextSizeText" type="RichTextLabel" parent="SettingsMenu/TextSizeDropdown"]
layout_mode = 0
offset_top = -27.0
offset_right = 143.0
offset_bottom = 13.0
text = "GAME TEXT SIZE"

[node name="AudioControlsContainer" type="VBoxContainer" parent="SettingsMenu"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 55.0
offset_top = -180.0
offset_right = 265.0
offset_bottom = -43.0
grow_vertical = 2

[node name="mvLabel" type="Label" parent="SettingsMenu/AudioControlsContainer"]
layout_mode = 2
text = "Master Volume:"

[node name="MasterVolumeSlider" parent="SettingsMenu/AudioControlsContainer" instance=ExtResource("7_7lek8")]
layout_mode = 2
max_value = 1.0
step = 0.001
bus_name = "Master"

[node name="sfxLabel" type="Label" parent="SettingsMenu/AudioControlsContainer"]
layout_mode = 2
text = "Sound Effects Volume:"

[node name="SFXVolumeSlider2" parent="SettingsMenu/AudioControlsContainer" instance=ExtResource("7_7lek8")]
layout_mode = 2
max_value = 1.0
step = 0.001
bus_name = "SFX"

[node name="bmLabel" type="Label" parent="SettingsMenu/AudioControlsContainer"]
layout_mode = 2
text = "Background Music Volume:"

[node name="MusicVolumeSlider3" parent="SettingsMenu/AudioControlsContainer" instance=ExtResource("7_7lek8")]
layout_mode = 2
max_value = 1.0
step = 0.001
bus_name = "Music"

[node name="MultiplayerMenu" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_5lr1l")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="StartMenu/NewText/NewButton" to="." method="newGamePressed"]
[connection signal="pressed" from="StartMenu/LoadText/LoadButton" to="." method="loadGamePressed"]
[connection signal="pressed" from="StartMenu/SettingsText/SettingsButton" to="." method="settingsPressed"]
[connection signal="pressed" from="StartMenu/QuitText/QuitButton" to="." method="quitPressed"]
[connection signal="pressed" from="SettingsMenu/BackText/BackButton" to="." method="hideSettingsMenu"]
[connection signal="item_selected" from="SettingsMenu/ResolutionsDropdown" to="SettingsMenu" method="setGameResolution"]
[connection signal="item_selected" from="SettingsMenu/TextSizeDropdown" to="SettingsMenu" method="setTextSize"]
